# Elevator-Simulator

./: CMakeLists.txt  Display.cpp  Elevator Simulator Project Report.docx  ElevatorDirection.cpp  ElevatorDirection.h  Elevators.cpp  Elevators.h  FileRead.cpp  FileRead.h  GenerateUniquePassenger.cpp  GenerateUniquePassenger.h  Passenger.cpp  Passenger.h  People.cpp  README.md  RandomGenerator.cpp  RandomGenerator.h  Security.cpp  Security.h  SecurityPersonnel.cpp  Soumil  StatisticsKeeper.cpp  StatisticsKeeper.h  SupportStaff.cpp  SupportStaff.h  SystemController.cpp  SystemController.h  SystemControllerBridge.cpp  SystemControllerBridge.h  SystemControllerImpA.cpp  SystemControllerImpA.h  SystemControllerInterface.cpp  SystemControllerInterface.h  TrafficGenerator.cpp  TrafficGenerator.h  Visitors.cpp  Visitors.h  main.cpp  partitions.cpp  partitions.h  (+4 more)
ElevatorEmulator/: Bulding.cpp  Bulding.h  CMakeLists.txt  DateTime.cpp  DateTime.h  Elevators.cpp  Elevators.h  FileRead.cpp  FileRead.h  MedicalStaff.cpp  Passenger.cpp  Passenger.h  Patients.cpp  Probablity.cpp  Probablity.h  RandomGenerator.cpp  RandomGenerator.h  SecurityPersonnel.cpp  StatisticsKeeper.cpp  StatisticsKeeper.h  StringHelper.cpp  StringHelper.h  SupportStaff.cpp  SystemController.cpp  SystemController.h  TrafficGenerator.cpp  TrafficGenerator.h  Visitors.cpp  input.txt  main.cpp  uml.txt
ElevatorTestSimulation/: CMakeLists.txt  Display.cpp  Display.h  ElevatorDirection.cpp  ElevatorDirection.h  Elevators.cpp  Elevators.h  FileRead.cpp  GenerateUniquePassenger.cpp  MedicalStaff.cpp  Passenger.cpp  Passenger.h  Patients.cpp  RandomGenerator.cpp  RandomGenerator.h  SecurityPersonnel.cpp  Staff.cpp  Staff.h  StatisticsKeeper.cpp  StatisticsKeeper.h  StringHelper.cpp  StringHelper.h  SupportStaff.cpp  SystemController.cpp  SystemController.h  TrafficGenerator.cpp  TrafficGenerator.h  Visitors.cpp  main.cpp
